# mescaline

./: .gitignore  .gitmodules  INSTALL  Makefile  Makefile.ios  README  README.md  Rakefile  Setup.hs  features.n3  mescaline.cabal
app/: Mescaline.hs  Setup.hs  main.hs  mescaline-app.cabal  mescaline.cabal  mescaline.glade  mescaline.icns  mescaline.ui  regions.txt
app-ios/: Engine.hs  Main.hs  MescalineAppDelegate.h  MescalineViewController.h  Mescaline_Prefix.pch  mescaline-ios.cabal
app-ios/Mescaline.xcodeproj/: project.pbxproj
app-iphone/: Engine.hs  HaskellDraw.cabal  Info.plist  Main.hs  MainWindow.m  MainWindow.xib  MescalineDelegate.m  MescalineViewController.m  MescalineViewController.xib
app-iphone/Classes/: HaskellDrawAppDelegate.h  HaskellDrawAppDelegate.m
app-iphone/Mescaline.xcodeproj/: project.pbxproj
app/Mescaline/Application/Config/: Qt.hs
app/Mescaline/Database/: Feature.hs  FeatureData.hs  SourceFile.hs  Unique.hs  Unit.hs
app/Mescaline/FeatureSpace/: View.hs
app/Mescaline/Pattern/: View.hs
doc/: Database.md  Ideas.md  Prototype.md
doc/logo/: website_header.xcf
examples/: effects.scd
include/: Accessor.h
ios-ui/: MainWindow.xib  MescalineViewController.xib  main.m  wern.db
ios-ui-cg/: RegionView.h  RegionView.m
ios-ui-cg/ios-ui-cg/: FakeModel.h  FakeModel.m  FakeModel.mm  FeatureSpace.h  FeatureSpace.m  GlobalTypes.h  MescalineStartViewController.h  MescalineStartViewController.m  MescalineStartViewController.xib  MescalineViewController.h  MescalineViewController.m  MescalineViewController.xib  Region.h  Region.m  RegionView.m  ios-ui-cg-Info.plist  ios-ui-cg-Prefix.pch  ios_ui_cgAppDelegate.h  ios_ui_cgAppDelegate.m  main.m
ios-ui-cg/ios-ui-cg.xcodeproj/: project.pbxproj
ios-ui-cg/ios-ui-cgTests/: ios-ui-cgTests-Info.plist  ios-ui-cgTests-Prefix.pch  ios_ui_cgTests.h  ios_ui_cgTests.m
ios-ui/Classes/: CGView.h  CGView.mm  FakeModel.h  FakeModel.m  FakeModel.mm  GlobalTypes.h  MescalineAppDelegate.h  MescalineAppDelegate.m  MescalineAppDelegate.mm  MescalineViewController.h  View.h  (+6 more)
lib/hsc3-server/: hsc3-server.cabal
lib/hsc3-server/Sound/SC3/Server/: Allocator.hs  Connection.hs  Monad.hs  State.hs
lib/hsc3-server/Sound/SC3/Server/Allocator/: Range.hs  SetAllocator.hs
lib/hsc3-server/Sound/SC3/Server/Process/: Monad.hs
lib/hsc3-server/Sound/SC3/Server/State/: Concurrent.hs  IO.hs
lib/hsc3-server/include/: Accessor.h
lib/mescaline/: Mescaline.hs  mescaline.cabal
lib/mescaline-database/: mescaline-database.cabal  runtests.hs
lib/mescaline-database/Mescaline/: Analysis.hs  Database.hs  Util.hs
lib/mescaline-database/Mescaline/Analysis/: JSON.hs  Meap.hs  Server.hs  SonicAnnotator.hs  Types.hs
lib/mescaline-database/Mescaline/Analysis/Meap/: Chain.hs  Extractor.hs  Process.hs  Segmenter.hs
lib/mescaline-database/Mescaline/Database/: Entity.hs  EntityGen.hs  Hash.hs  Vector.hs
lib/mescaline-database/Sound/Analysis/: Segmentation.hs  SonicAnnotator.hs
lib/mescaline-database/Sound/Analysis/Segmentation/: Statistics.hs
lib/mescaline-database/Sound/File/Sndfile/: Util.hs
lib/mescaline-patterns/: ghcid.sh  mescaline-patterns.cabal  runtests.hs  stack.yaml
lib/mescaline-patterns/Mescaline/: Time.hs
lib/mescaline-patterns/Mescaline/Pattern/: Patch.hs
lib/mescaline-patterns/Mescaline/Pattern/Patch/: Default.hs
lib/mescaline-patterns/app/: Main.hs
lib/mescaline-patterns/src/Mescaline/: Clock.hs  Hugs.hs  Pattern.hs  Quant.hs  Time.hs
lib/mescaline-patterns/src/Mescaline/Pattern/: Base.hs  Event.hs  Interpreter.hs  Player.hs  Ppar.hs
lib/mescaline-patterns/tests/Mescaline/Data/PriorityQueue/: Test.hs
lib/mescaline/Control/Concurrent/: Process.hs
lib/mescaline/Control/Concurrent/Chan/: Chunked.hs
lib/mescaline/Control/Concurrent/MVar/: StrictModify.hs
lib/mescaline/Data/: KDTree.hs  ProbabilisticSuffixTree.hs
lib/mescaline/Data/Aeson/: Config.hs
lib/mescaline/Data/ProbabilisticSuffixTree/: Context.hs
lib/mescaline/Data/Signal/: SF.hs
lib/mescaline/Data/Signal/SF/: Base.hs
lib/mescaline/Mescaline/: Application.hs  EngineSF.hs  Hugs.hs  Pattern.hs  Time.hs
lib/mescaline/Mescaline/Application/: Config.hs  Desktop.hs  Logger.hs
lib/mescaline/Mescaline/Application/Config/: Type.hs
lib/mescaline/Mescaline/Data/: ByteString.hs  PriorityQueue.hs  Signal.hs  Unique.hs
lib/mescaline/Mescaline/FeatureSpace/: Model.hs  Process.hs  Unit.hs
lib/mescaline/Mescaline/Pattern/: AST.hs  Base.hs  Binding.hs  Compiler.hs  Environment.hs  Event.hs  Interpreter.hs  Library.hs  Patch.hs  Player.hs  Process.hs  Sequencer.hs
lib/mescaline/Mescaline/Pattern/AST/: Library.hs
lib/mescaline/Mescaline/Pattern/Patch/: Default.hs  Version_0_0_1.hs
lib/mescaline/Mescaline/Synth/BufferCache/: Alloc.hs  Server.hs
lib/mescaline/Mescaline/Synth/SSF/: BufferCache.hs  DiskSampler.hs
lib/mescaline/Mescaline/Synth/Sampler/: Model.hs  Params.hs  Process.hs
lib/mescaline/tests/: runtests.hs
lib/mescaline/tests/Data/KDTree/: Test.hs
lib/mescaline/tests/Mescaline/Data/PriorityQueue/: Test.hs
prototype/: effects.scd
resources/: colors.txt  config  editor.ui  messages.ui  src
src/: Mescaline.hs
tools/: analyser.hs  bootstrap  cabal-build.rb  cabalbuild  curlikofski.hs  dimred.m  editfeature.hs  ghci.sh  looper.hs  mescaline-tools.cabal  mescalinedb.hs  mkdb.hs  mkdb.rb  qtc_fixemup  readfiles.rb  sampler.hs  sequencer.hs  server.hs
tools/cluster/: cluster.py  database.py
tools/meap/: README.md  meap  meap-extract
tools/meap-extract/: README.md  meap-extract
tools/meap-extract/lib/: threadpool.rb
tools/sampler/Mescaline/Sampler/: GUI.hi  GUI.hs  Keyboard.hs  Looper.hs  MIDI.hs
tools/sc_prototype/lib/patterns/: Precord.html  Precord.sc
tools/sc_prototype/scripts/: setup.scd  synthdefs.scd  talk.scd
tools/sts/: Engine.hs  Main.hs  MainCmdline.hs  mescaline-sts.cabal  sts.glade
tools/sts/Mescaline/: ColourMap.hs
tools/sts/Reactive/Banana/: EventSource.hs
upstream/data-accessor-mtl2/: data-accessor-mtl2.cabal
upstream/data-accessor-mtl2/src/Data/Accessor/Monad/MTL/: State.hs
(+193 files in other folders)
