name:               mescaline
version:            0.0.1
synopsis:           Mescaline is a data-driven sequencer and synthesizer.
description:        Mescaline is a data-driven sequencer and synthesizer.
category:           Sound
license:            GPL-3
license-file:       COPYING
author:             globero.es
copyright:          (c) 2009-2010 globero.es
maintainer:         mescaline@globero.es
homepage:           http://mescaline.globero.es
bug-reports:        http://sourceforge.net/tracker/?group_id=266308&atid=1133628
cabal-version:      >= 1.2
build-type:         Custom

extra-source-files:
    README

library
    hs-source-dirs: src
    ghc-options:    -W
    include-dirs:   include
    build-depends:
        base >= 4 && < 5
      , array >= 0.2 && < 0.4
      -- , arrows
      , binary
      , bitset >= 1.0 && < 1.1
      , bytestring
      , bytestring-lexing >= 0.2
      , Cabal >= 1.6
      -- , CCA >= 0.1.3 && < 0.2
      , containers
      , ConfigFile >= 1.0 && < 1.1
      , Control-Engine >= 1.0 && < 1.2
      , data-accessor >= 0.2
      , data-accessor-mtl >= 0.2
      , data-ivar >= 0.30 && < 0.31
      , deepseq >= 1.1 && < 1.2
      , delimited-text >= 0.1
      , directory
      , enumerator >= 0.4
      , filepath
      , FindBin >= 0.0 && < 0.1
      , fingertree
      , HDBC >= 1.1 && < 2
      , HDBC-sqlite3 >= 1.1 && < 2
      , hmatrix >= 0.10 && < 0.11
      , hmeap >= 0.8
      , hosc >= 0.8
      , hslogger >= 1.1
      , hsc3 >= 0.8
      , hsc3-lang >= 0.8
      , hsc3-process >= 0.4 && < 0.5
      , hsndfile >= 0.4
      , MonadCatchIO-mtl >= 0.3
      , MonadRandom >= 0.1
      , mtl >= 2
      , parallel >= 3 && < 4
      , persistent
      , persistent-sqlite
      , process >= 1.0
      , random >= 1.0
      , regex-compat >= 0.92
      -- , statistics >= 0.8 && < 0.9
      , SHA2 >= 0.2
      , strict-concurrency >= 0.2
      -- , template-haskell
      , uuid >= 1.0
      , vector >= 0.5
    exposed-modules:
        -- Control.CCA.ArrowP
        Control.Concurrent.Chan.Chunked
        Control.Concurrent.MVar.StrictModify
        Control.Concurrent.Process
        Data.KDTree
        -- Data.Signal.SF
        -- Data.Signal.SF.Base
        -- Data.Signal.SF.Event
        Mescaline
        Mescaline.Analysis
        Mescaline.Analysis.SonicAnnotator
        Mescaline.Analysis.Meap
        Mescaline.Analysis.Meap.Chain
        Mescaline.Analysis.Meap.Extractor
        Mescaline.Analysis.Meap.Feature
        Mescaline.Analysis.Meap.Process
        Mescaline.Analysis.Meap.Segmenter
        Mescaline.Application
        Mescaline.Application.Config
        Mescaline.Application.Desktop
        Mescaline.Application.Logger
        Mescaline.Data.ByteString
        Mescaline.Data.ListReader
        Mescaline.Data.PriorityQueue
        Mescaline.Data.Unique
        Mescaline.Database
        Mescaline.Database.Entity
        Mescaline.Database.Feature
        Mescaline.Database.Hash
        Mescaline.Database.Model
        -- Mescaline.Database.Query
        Mescaline.Database.SourceFile
        Mescaline.Database.Sql
        Mescaline.Database.SqlQuery
        Mescaline.Database.Table
        Mescaline.Database.Unit
        Mescaline.Hugs
        Mescaline.Math
        Mescaline.Pattern
        Mescaline.Pattern.AST
        Mescaline.Pattern.AST.Library
        Mescaline.Pattern.Base
        Mescaline.Pattern.Binding
        Mescaline.Pattern.Compiler
        Mescaline.Pattern.Environment
        Mescaline.Pattern.Event
        Mescaline.Pattern.Interpreter
        Mescaline.Pattern.Library
        Mescaline.Pattern.Patch
        Mescaline.Pattern.Patch.Version_0_0_1
        Mescaline.Pattern.Ppar
        Mescaline.Pattern.Player
        Mescaline.Pattern.Process
        Mescaline.Pattern.Sequencer
        Mescaline.Statistics.PCA
        Mescaline.Synth.BufferCache
        Mescaline.Synth.BufferCache.Alloc
        Mescaline.Synth.BufferCache.Server
        Mescaline.Synth.Database.Model
        Mescaline.Synth.Database.Process
        Mescaline.FeatureSpace.Model
        Mescaline.FeatureSpace.Process
        Mescaline.FeatureSpace.Unit
        Mescaline.Synth.OSCServer
        Mescaline.Synth.Sampler.Model
        Mescaline.Synth.Sampler.Process
        -- Mescaline.Synth.SSF
        -- Mescaline.Synth.SSF.BufferCache
        -- Mescaline.Synth.SSF.DiskSampler
        Mescaline.Time
        Mescaline.Util
        Sound.File.Sndfile.Util
        Sound.OpenSoundControl.Monoid
        Sound.SC3.Server.Allocator
        Sound.SC3.Server.Allocator.Range
        Sound.SC3.Server.Allocator.SetAllocator
        Sound.SC3.Server.Allocator.SimpleAllocator
        Sound.SC3.Server.Connection
        Sound.SC3.Server.Monad
        Sound.SC3.Server.Notification
        Sound.SC3.Server.Process.Monad
        Sound.SC3.Server.State
        Sound.SC3.Server.State.IO
    other-modules:
        Paths_mescaline

executable mescalinedb
    main-is:            mescalinedb.hs
    build-depends:      hmatrix >= 0.10 && < 0.11
    ghc-options:        -W -threaded -funbox-strict-fields
    hs-source-dirs:     src, tools
