Name:               mescaline
Version:            0.0.1
Synopsis:           Mescaline is a data-driven sequencer and synthesizer.
Description:        Mescaline is a data-driven sequencer and synthesizer.
Category:           Sound
License:            GPL-3
License-File:		COPYING
Author:             puesnada.es
Copyright:          (c) 2009-2011 puesnada.es
Maintainer:         mescaline@puesnada.es
Homepage:           http://mescaline.puesnada.es
Bug-Reports:        https://github.com/kaoskorobase/mescaline/issues
Cabal-Version:      >= 1.2
Build-Type:         Simple

Flag analysis
    Description: Include analysis code
    Default: True

library
    hs-source-dirs: src
    ghc-options:    -W
    include-dirs:   include
    build-depends:
        base >= 4 && < 5
      , array >= 0.2
      , aeson
      -- , arrows
      , binary
      , bitset >= 1.0
      , bytestring
      , bytestring-lexing >= 0.2
      , Cabal >= 1.6
      -- , CCA >= 0.1.3 && < 0.2
      , containers
      , ConfigFile >= 1.0
      , Control-Engine >= 1.0
      , data-accessor >= 0.2
      , data-accessor-mtl
      , data-ivar >= 0.30
      , deepseq >= 1.1
      -- , delimited-text >= 0.2.1
      , directory
      , enumerator >= 0.4
      , failure
      , filepath
      , FindBin >= 0.0
      , fingertree
      -- , hmeap >= 0.8
      , hosc >= 0.8
      , hslogger >= 1.1
      , hsc3 >= 0.8
      , hsc3-lang >= 0.8
      , hsc3-process >= 0.4
      , hsndfile >= 0.4
      , MonadCatchIO-mtl >= 0.3
      , MonadRandom >= 0.1
      , mtl >= 2
      , parallel >= 3
      , persistent
      , persistent-sqlite
      , process >= 1.0
      , random >= 1.0
      , regex-compat >= 0.92
      , SHA2 >= 0.2.3
      , statistics >= 0.8
      , strict-concurrency >= 0.2
      -- , template-haskell
      , text
      , transformers
      -- , uuid >= 1.0
      , vector >= 0.5
    exposed-modules:
        -- Control.CCA.ArrowP
        Control.Concurrent.Chan.Chunked
        Control.Concurrent.MVar.StrictModify
        Control.Concurrent.Process
        Data.KDTree
        -- Data.Signal.SF
        -- Data.Signal.SF.Base
        -- Data.Signal.SF.Event
        Mescaline
        Mescaline.Application
        Mescaline.Application.Config
        Mescaline.Application.Desktop
        Mescaline.Application.Logger
        Mescaline.Data.ByteString
        Mescaline.Data.PriorityQueue
        -- Mescaline.Data.Unique
        Mescaline.Database
        Mescaline.Database.Entity
        Mescaline.Database.Hash
        Mescaline.Database.Process
        Mescaline.Database.Vector
        Mescaline.FeatureSpace.Model
        Mescaline.FeatureSpace.Process
        Mescaline.FeatureSpace.Unit
        Mescaline.Hugs
        Mescaline.Math
        Mescaline.Pattern
        Mescaline.Pattern.AST
        Mescaline.Pattern.AST.Library
        Mescaline.Pattern.Base
        Mescaline.Pattern.Binding
        Mescaline.Pattern.Compiler
        Mescaline.Pattern.Environment
        Mescaline.Pattern.Event
        Mescaline.Pattern.Interpreter
        Mescaline.Pattern.Library
        Mescaline.Pattern.Patch
        Mescaline.Pattern.Patch.Default
        Mescaline.Pattern.Patch.Version_0_0_1
        Mescaline.Pattern.Ppar
        Mescaline.Pattern.Player
        Mescaline.Pattern.Process
        Mescaline.Pattern.Sequencer
        Mescaline.Synth.BufferCache
        Mescaline.Synth.BufferCache.Alloc
        Mescaline.Synth.BufferCache.Server
        Mescaline.Synth.OSCServer
        Mescaline.Synth.Sampler.Model
        Mescaline.Synth.Sampler.Process
        -- Mescaline.Synth.SSF
        -- Mescaline.Synth.SSF.BufferCache
        -- Mescaline.Synth.SSF.DiskSampler
        Mescaline.Time
        Mescaline.Util
        Sound.File.Sndfile.Util
        Sound.OpenSoundControl.Monoid
        Sound.SC3.Server.Allocator
        Sound.SC3.Server.Allocator.Range
        Sound.SC3.Server.Allocator.SetAllocator
        Sound.SC3.Server.Allocator.SimpleAllocator
        Sound.SC3.Server.Connection
        Sound.SC3.Server.Monad
        Sound.SC3.Server.Notification
        Sound.SC3.Server.Process.Monad
        Sound.SC3.Server.State
        Sound.SC3.Server.State.IO
    if flag(analysis)
        build-depends:
            hmatrix >= 0.11
          , attoparsec-text
          , xml-enumerator
        exposed-modules:
            Mescaline.Analysis
            Mescaline.Analysis.JSON
            -- Mescaline.Analysis.Meap
            -- Mescaline.Analysis.Meap.Chain
            -- Mescaline.Analysis.Meap.Extractor
            -- Mescaline.Analysis.Meap.Feature
            -- Mescaline.Analysis.Meap.Process
            -- Mescaline.Analysis.Meap.Segmenter
            Mescaline.Analysis.SonicAnnotator
            Mescaline.Analysis.Types
            Mescaline.Statistics.PCA
            Sound.Analysis.Segmentation
            Sound.Analysis.Segmentation.Statistics
            Sound.Analysis.SonicAnnotator
            Sound.Analysis.Vector
        CPP-Options: -DUSE_ANALYSIS=1

    other-modules:
        Paths_mescaline
