Name:               mescaline-ios
Version:            0.0.1
Synopsis:           Mescaline is a data-driven sequencer and synthesizer.
Description:        Mescaline is a data-driven sequencer and synthesizer.
Category:           Sound
License:            GPL-3
-- License-File:       COPYING
Author:             puesnada.es
Copyright:          (c) 2009-2011 puesnada.es
Maintainer:         mescaline@puesnada.es
Homepage:           http://mescaline.puesnada.es
Bug-Reports:        https://github.com/kaoskorobase/mescaline/issues
Cabal-Version:      >= 1.2
Build-Type:         Simple

executable mescaline-ios
    Main-Is:            Main.hs
    Executable:         False
    if !flag(ios)
        Buildable: False
    Ghc-Options:        -W -threaded -funbox-strict-fields
	Build-Depends:
		mescaline