Name:               mescaline-app
Version:            0.0.1
Synopsis:           Mescaline is a data-driven sequencer and synthesizer.
Description:        Mescaline is a data-driven sequencer and synthesizer.
Category:           Sound
License:            GPL-3
-- License-File:       COPYING
Author:             puesnada.es
Copyright:          (c) 2009-2011 puesnada.es
Maintainer:         mescaline@puesnada.es
Homepage:           http://mescaline.puesnada.es
Bug-Reports:        https://github.com/kaoskorobase/mescaline/issues
Cabal-Version:      >= 1.2
Build-Type:         Custom

extra-source-files:
    ../README

data-dir:
    ../resources

data-files:
    config
    editor.ui
    mescaline.ui
    messages.ui

    patches/default.hs
    patches/examples/brown.msc
    patches/examples/brown_polar.msc
    patches/examples/choose.msc
    patches/examples/feature_to_amp.msc
    patches/examples/feature_to_effect.msc
    patches/examples/feature_to_pan.msc
    patches/examples/player.msc
    patches/examples/rest.msc
    patches/examples/seq.msc
    patches/examples/takeDur.msc

    meap/2.0/getopt-1.0.12.jar
    meap/2.0/jl1.0.jar
    meap/2.0/MEAPsoft.jar
    meap/2.0/mp3spi1.9.4.jar
    meap/2.0/swing-layout-1.0.jar
    meap/2.0/tritonus_misc.jar
    meap/2.0/tritonus_mp3.jar
    meap/2.0/tritonus_share.jar

    src/Mescaline/Pattern/AST.hs
    src/Mescaline/Pattern/Library.hs

    hugs/packages/base/Control/Applicative.hs
    hugs/packages/base/Control/Arrow.hs
    hugs/packages/base/Control/Concurrent/Chan.hs
    hugs/packages/base/Control/Concurrent/MVar.hs
    hugs/packages/base/Control/Concurrent/QSem.hs
    hugs/packages/base/Control/Concurrent/QSemN.hs
    hugs/packages/base/Control/Concurrent/SampleVar.hs
    hugs/packages/base/Control/Concurrent.hs
    hugs/packages/base/Control/Exception.hs
    hugs/packages/base/Control/Monad/Fix.hs
    hugs/packages/base/Control/Monad/Instances.hs
    hugs/packages/base/Control/Monad/ST/Lazy.hs
    hugs/packages/base/Control/Monad/ST/Strict.hs
    hugs/packages/base/Control/Monad/ST.hs
    hugs/packages/base/Control/Monad.hs
    hugs/packages/base/Control/Parallel.hs
    hugs/packages/base/Data/Array/Base.hs
    hugs/packages/base/Data/Array/Diff.hs
    hugs/packages/base/Data/Array/IArray.hs
    hugs/packages/base/Data/Array/IO/Internals.hs
    hugs/packages/base/Data/Array/IO.hs
    hugs/packages/base/Data/Array/MArray.hs
    hugs/packages/base/Data/Array/ST.hs
    hugs/packages/base/Data/Array/Storable.hs
    hugs/packages/base/Data/Array/Unboxed.hs
    hugs/packages/base/Data/Array.hs
    hugs/packages/base/Data/Bits.hs
    hugs/packages/base/Data/Bool.hs
    hugs/packages/base/Data/Char.hs
    hugs/packages/base/Data/Complex.hs
    hugs/packages/base/Data/Dynamic.hs
    hugs/packages/base/Data/Either.hs
    hugs/packages/base/Data/Eq.hs
    hugs/packages/base/Data/Fixed.hs
    hugs/packages/base/Data/Foldable.hs
    hugs/packages/base/Data/FunctorM.hs
    hugs/packages/base/Data/Graph.hs
    hugs/packages/base/Data/HashTable.hs
    hugs/packages/base/Data/Int.hs
    hugs/packages/base/Data/IntMap.hs
    hugs/packages/base/Data/IntSet.hs
    hugs/packages/base/Data/IORef.hs
    hugs/packages/base/Data/Ix.hs
    hugs/packages/base/Data/List.hs
    hugs/packages/base/Data/Map.hs
    hugs/packages/base/Data/Maybe.hs
    hugs/packages/base/Data/Monoid.hs
    hugs/packages/base/Data/Ord.hs
    hugs/packages/base/Data/PackedString.hs
    hugs/packages/base/Data/Queue.hs
    hugs/packages/base/Data/Ratio.hs
    hugs/packages/base/Data/Sequence.hs
    hugs/packages/base/Data/Set.hs
    hugs/packages/base/Data/STRef/Lazy.hs
    hugs/packages/base/Data/STRef/Strict.hs
    hugs/packages/base/Data/STRef.hs
    hugs/packages/base/Data/Traversable.hs
    hugs/packages/base/Data/Tree.hs
    hugs/packages/base/Data/Tuple.hs
    hugs/packages/base/Data/Typeable.hs
    hugs/packages/base/Data/Unique.hs
    hugs/packages/base/Data/Version.hs
    hugs/packages/base/Data/Word.hs
    hugs/packages/base/Prelude.hs
    hugs/packages/base/System/IO/Error.hs
    hugs/packages/base/System/IO/Unsafe.hs
    hugs/packages/base/System/IO.hs
    hugs/packages/base/System/Random.hs
    hugs/packages/hugsbase/Hugs/Array.hs
    hugs/packages/hugsbase/Hugs/Bits.hs
    hugs/packages/hugsbase/Hugs/ByteArray.hs
    hugs/packages/hugsbase/Hugs/Char.hs
    hugs/packages/hugsbase/Hugs/ConcBase.hs
    hugs/packages/hugsbase/Hugs/CVHAssert.hs
    hugs/packages/hugsbase/Hugs/Directory.hs
    hugs/packages/hugsbase/Hugs/Dynamic.hs
    hugs/packages/hugsbase/Hugs/Exception.hs
    hugs/packages/hugsbase/Hugs/ForeignPtr.hs
    hugs/packages/hugsbase/Hugs/GenericPrint.hs
    hugs/packages/hugsbase/Hugs/Int.hs
    hugs/packages/hugsbase/Hugs/Internals.hs
    hugs/packages/hugsbase/Hugs/IO.hs
    hugs/packages/hugsbase/Hugs/IOArray.hs
    hugs/packages/hugsbase/Hugs/IOExts.hs
    hugs/packages/hugsbase/Hugs/IORef.hs
    hugs/packages/hugsbase/Hugs/LazyST.hs
    hugs/packages/hugsbase/Hugs/Memo.hs
    hugs/packages/hugsbase/Hugs/Numeric.hs
    hugs/packages/hugsbase/Hugs/Observe.hs
    hugs/packages/hugsbase/Hugs/Prelude.hs
    hugs/packages/hugsbase/Hugs/Ptr.hs
    hugs/packages/hugsbase/Hugs/Quote.hs
    hugs/packages/hugsbase/Hugs/ST.hs
    hugs/packages/hugsbase/Hugs/Stable.hs
    hugs/packages/hugsbase/Hugs/StablePtr.hs
    hugs/packages/hugsbase/Hugs/Storable.hs
    hugs/packages/hugsbase/Hugs/System.hs
    hugs/packages/hugsbase/Hugs/Time.hs
    hugs/packages/hugsbase/Hugs/Trex.hs
    hugs/packages/hugsbase/Hugs/Weak.hs
    hugs/packages/hugsbase/Hugs/Word.hs
    hugs/packages/hugsbase/Hugs.hs
    hugs/packages/mtl/Control/Monad/Cont.hs
    hugs/packages/mtl/Control/Monad/Error.hs
    hugs/packages/mtl/Control/Monad/Identity.hs
    hugs/packages/mtl/Control/Monad/List.hs
    hugs/packages/mtl/Control/Monad/Reader.hs
    hugs/packages/mtl/Control/Monad/RWS.hs
    hugs/packages/mtl/Control/Monad/State.hs
    hugs/packages/mtl/Control/Monad/Trans.hs
    hugs/packages/mtl/Control/Monad/Writer.hs
    hugs/packages/mtl/LICENSE

flag build-app-bundle
    description: Build an MacOS X application bundle
    default: False

executable mescaline
    main-is:            main.hs
    ghc-options:        -W -threaded -rtsopts
    ghc-prof-options:   -W -threaded -auto-all -rtsopts
    build-depends:
        base >= 4 && < 6
      , containers
      , directory
      , hosc
      , hsc3-process >= 0.4
      , hsc3-server
      , mescaline
      , mescaline-database
      , mtl >= 2
      , filepath
      , FindBin
      , qt >= 1.1
      , random
      , regex-compat
      , vector
    if os(darwin)
        build-depends:
            cabal-macosx >= 0.1 && < 0.2
        ld-options:
            -headerpad_max_install_names
    if flag(build-app-bundle)
        x-build-app-bundle: True
    Other-Modules:
        Mescaline.FeatureSpace.View
        Mescaline.Pattern.View
        Mescaline.Application.Config.Qt
        Paths_mescaline_app
