Name:               mescaline-patterns
Version:            0.0.1
Synopsis:           Musical pattern language
Description:        Musical pattern language
Category:           Sound
License:            GPL-3
License-File:	    COPYING
Author:             Stefan Kersten
Copyright:          Copyright (c) 2009 Stefan Kersten
Maintainer:         kaoskorobase@gmail.com
Homepage:           http://mescaline.puesnada.es
Bug-Reports:        https://github.com/kaoskorobase/mescaline/issues
Cabal-Version:      >= 1.2
Build-Type:         Simple

library
    hs-source-dirs: src
    ghc-options:    -Wall
    build-depends:
        base
      -- , aeson >= 0.2
      -- , attoparsec
      -- , bitset >= 1.0
      , array
      -- -- , arrows
      -- , bytestring
      -- , Cabal >= 1.6
      -- -- , CCA >= 0.1.3 && < 0.2
      , containers
      -- , ConfigFile >= 1.0
      -- , data-ivar >= 0.30
      -- , deepseq >= 1.1
      -- , directory
      -- , dlist
      -- , failure
      -- , filepath
      -- , FindBin >= 0.0
      , fingertree
      -- -- , hmeap >= 0.8
      , hashable
      , hsc3-lang
      -- , hsc3-process >= 0.6
      -- , hsc3-server >= 0.3
      , lens
      -- , mescaline-database >= 0.0 && < 0.1
      -- , monad-control
      -- -- , MonadCatchIO-mtl >= 0.3
      , MonadRandom
      , mtl >= 2
      -- , old-time
      -- , parallel >= 3
      , process >= 1.0
      , random >= 1.0
      , temporary
      -- , text
      -- , transformers
      -- -- , uuid >= 1.0
      -- , vector >= 0.5
    exposed-modules:
        Mescaline.Data.PriorityQueue
        Mescaline.Pattern
        -- Mescaline.Pattern.AST
        -- Mescaline.Pattern.AST.Library
        -- Mescaline.Pattern.Base
        -- Mescaline.Pattern.Binding
        -- Mescaline.Pattern.Compiler
        -- Mescaline.Pattern.Environment
        -- Mescaline.Pattern.Event
        -- Mescaline.Pattern.Library
        -- Mescaline.Pattern.Patch
        -- Mescaline.Pattern.Patch.Default
        -- Mescaline.Pattern.Patch.Version_0_0_1
        Mescaline.Pattern.Ppar
        -- Mescaline.Pattern.Player
        -- Mescaline.Pattern.Process
        -- Mescaline.Pattern.Sequencer
        Mescaline.Time
