Name:               mescaline-patterns
Version:            0.0.1
Synopsis:           Musical pattern language
Description:        Musical pattern language
Category:           Sound
License:            GPL-3
License-File:	    COPYING
Author:             Stefan Kersten
Copyright:          Copyright (c) 2009 Stefan Kersten
Maintainer:         kaoskorobase@gmail.com
Homepage:           http://mescaline.puesnada.es
Bug-Reports:        https://github.com/kaoskorobase/mescaline/issues
Cabal-Version:      >= 1.8
Build-Type:         Simple

library
    hs-source-dirs: src
    ghc-options:    -Wall
    build-depends:
        base
      , array
      , async
      , containers
      , data-default
      , fingertree
      , hashable
      , hint
      , hosc
      , hsc3-lang
      , lens
      , MonadRandom
      , mtl >= 2
      , process >= 1.0
      , random >= 1.0
      , reactive-banana
      , stm
      , stm-chans
      , temporary
    exposed-modules:
        Mescaline.Data.PriorityQueue
        Mescaline.Pattern
        -- Mescaline.Pattern.AST
        -- Mescaline.Pattern.AST.Library
        -- Mescaline.Pattern.Base
        -- Mescaline.Pattern.Binding
        -- Mescaline.Pattern.Compiler
        -- Mescaline.Pattern.Environment
        Mescaline.Pattern.Event
        -- Mescaline.Pattern.Library
        -- Mescaline.Pattern.Patch
        -- Mescaline.Pattern.Patch.Default
        -- Mescaline.Pattern.Patch.Version_0_0_1
        Mescaline.Pattern.Ppar
        Mescaline.Pattern.Player
        -- Mescaline.Pattern.Process
        -- Mescaline.Pattern.Sequencer
        Mescaline.Time

executable mescaline-pattern-machine
    hs-source-dirs: app
    main-is: Main.hs
    ghc-options: -Wall -threaded -rtsopts
    build-depends:
        base
      , data-default
      , fsnotify
      , hint
      , hosc >= 0.16
      , filepath
      , mescaline-patterns
      , reactive-banana
